k8s/minikube/common/gateway/deploy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/cse/import/idcc$ /cse/import/idcc/ permanent;
      rewrite ^/cse/import/d2cc$ /cse/import/d2cc/ permanent;
      rewrite ^/cse/export/idcc$ /cse/export/idcc/ permanent;
      rewrite ^/cse/export/d2cc$ /cse/export/d2cc/ permanent;
      rewrite ^/core/valid$ /core/valid/ permanent;
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  labels:
    app: gridcapa
    component: gridcapa
  name: gridcapa-dev
spec:
  rules:
    - host: gridcapa-dev.farao-local-community.com
      http:
        paths:
          - backend:
              service:
                name: core-valid-gridcapa-app
                port:
                  number: 80
            path: /core/valid(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(core/valid/config/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(core/valid/config-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(core/valid/task-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(core/valid/task-manager/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(core/valid/gridcapa-job-launcher/.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-gridcapa-app
                port:
                  number: 80
            path: /cse/import/idcc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/idcc/config/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/idcc/config-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/idcc/task-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/idcc/task-manager/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/idcc/gridcapa-job-launcher/.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-gridcapa-app
                port:
                  number: 80
            path: /cse/import/d2cc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/d2cc/config/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/d2cc/config-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/d2cc/task-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/d2cc/task-manager/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/import/d2cc/gridcapa-job-launcher/.*)
            pathType: Prefix

          - backend:
              service:
                name: cse-export-idcc-gridcapa-app
                port:
                  number: 80
            path: /cse/export/idcc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/idcc/config/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/idcc/config-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/idcc/task-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/idcc/task-manager/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/idcc/gridcapa-job-launcher/.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-gridcapa-app
                port:
                  number: 80
            path: /cse/export/d2cc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/d2cc/config/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/d2cc/config-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/d2cc/task-notification/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/d2cc/task-manager/.*)
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            path: /()(cse/export/d2cc/gridcapa-job-launcher/.*)
            pathType: Prefix

          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /utils/filebrowser(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gridcapa-rabbitmq
                port:
                  number: 15672
            path: /utils/rabbitmq(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: apps-metadata-server
                port:
                  number: 80
            path: /apps-metadata(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gridcapa-minio
                port:
                  number: 9000
            path: /()(minio.*)
            pathType: Prefix
  tls:
    - hosts:
        - gridcapa-dev.farao-local-community.com
      secretName: gridcapa-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gridcapa
    component: gateway
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: gateway
  template:
    metadata:
      labels:
        app: gridcapa
        component: gateway
    spec:
      containers:
        - name: gateway
          image: docker.io/farao/gridcapa-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: gateway-configmap-volume
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "384Mi"
            limits:
              memory: "384Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
      restartPolicy: Always
      volumes:
        - name: gateway-configmap-volume
          configMap:
            name: gateway-configmap
        - name: tmp-emptydir
          emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gridcapa
    component: gateway
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
